# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
config/: development.ini
scripts/: init_db.sh
src/: config.rs  configuration.rs  graceful_shutdown.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routers/: subscriptions.rs
src/routes/: subscriptions.rs
test/: server.rs
tests/: health_check.rs  zer2prod.rs
