[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"


[dependencies]
actix-rt = "2.6.0"
actix-web = "3.3.3"
tokio = { version = "1.15.0", features = ["full"] }
